[package]
name = "win_ui"
version = "0.1.0"
authors = ["joe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22"
raw-window-handle = "0.3"
winrt = { git = "https://github.com/microsoft/winrt-rs", branch = "foundation" }
bindings = { path = "./bindings"}
rand = "0.7"
paho-mqtt = "0.7.1"

[build-dependencies]
embed-resource = "1.3"

[package.metadata.winrt.dependencies]
"Microsoft.Windows.SDK.Contracts" = "10.0.19041.1"
"KennyKerr.Windows.TestWinRT" = "1.0.21"
