[package]
name = "win_ui"
version = "0.1.0"
authors = ["joe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22"
raw-window-handle = "0.3"
winrt = { git = "https://github.com/microsoft/winrt-rs", branch = "foundation" }
bindings = { path = "./bindings"}
rand = "0.7"
paho-mqtt = "0.7.1"
serde_json = "1.0"

[build-dependencies]
embed-resource = "1.3"
